new apts, video

--- a/index.html
+++ b/index.html
@@ -240,7 +240,35 @@
 							</div>
 						</div>
 
-						<!-- <div class="clear"></div> -->
+						<div class="clear"></div>
+
+						<!-- PORTFOLIO - ITEM 5 -->
+						<div class="col-sm-6 col-md-3" data-animation="fadeIn">
+							<div class="portfolio-item">
+								<img class="portfolio-item-picture" src="images/contents/portfolio-item-5.jpg" alt="">
+								<div class="portfolio-item-overlay"></div>
+								<div class="portfolio-item-text">
+									<h4 class="portfolio-item-title">2BR Kalamaja Vabriku Street</h4>
+									<p class="portfolio-item-description">Homey family apartment in Kalamaja.</p>
+                                    <p class="portfolio-item-description"><a href="https://www.airbnb.com/rooms/13230755" target="_blank" class="btn btn-primary" onclick="ga('send', 'event', 'button', 'click', 'apartments:Check Availability - Vabriku');">Check Availability</a></p>
+
+								</div>
+							</div>
+						</div>
+
+						<!-- PORTFOLIO - ITEM 6 -->
+						<div class="col-sm-6 col-md-3" data-animation="fadeIn">
+							<div class="portfolio-item">
+								<img class="portfolio-item-picture" src="images/contents/portfolio-item-6.jpg" alt="">
+								<div class="portfolio-item-overlay"></div>
+								<div class="portfolio-item-text">
+									<h4 class="portfolio-item-title">1BR Kalamaja Kotzebue Street</h4>
+									<p class="portfolio-item-description">Cozy, quiet and spacious apartment in the heart of Kalamaja.</p>
+                                    <p class="portfolio-item-description"><a href="https://www.airbnb.com/rooms/10655558" target="_blank" class="btn btn-primary" onclick="ga('send', 'event', 'button', 'click', 'apartments:Check Availability - Kotzebue');">Check Availability</a></p>
+
+								</div>
+							</div>
+						</div>
 
 
 
@@ -407,6 +435,30 @@
 			</section>
 
 
+			<!-- VIDEO SECTION
+			================================= -->
+			<section id="video" class="video-section section-gray section">
+
+				<div class="container">
+
+					<h2 class="section-heading text-center">Watch the Video</h2>
+
+					<div class="row">
+						<div class="col-md-10 col-md-offset-1">
+
+							<div class="video-embed">
+
+								<!-- VIDEO EMBED FROM YOUTUBE -->
+								<iframe class="video-async" data-source="youtube" data-video="7UAy8E3e9f8" allowfullscreen></iframe>
+
+							</div>
+
+						</div>
+					</div>
+
+				</div>
+			</section>
+
 
 
 
@@ -448,6 +500,16 @@
 								lon : 24.748579,
 								animation : google.maps.Animation.DROP,
                                 html : "<strong><a href='https://www.airbnb.com/rooms/8988450' target='_blank' onclick='ga(/'send/', /'event/', /'button/', /'click/', /'apartments:maps - Väike-Karja/');'>2BR Old Town Väike-Karja Street</a></strong><br/>Väike-Karja 9, Tallinn",
+							}, {
+								lat : 59.442732,
+								lon : 24.731136,
+								animation : google.maps.Animation.DROP,
+                                html : "<strong><a href='https://www.airbnb.com/rooms/13230755' target='_blank' onclick='ga(/'send/', /'event/', /'button/', /'click/', /'apartments:maps - Vabriku/');'>2BR Kalamaja Vabriku Street</a></strong><br/>Vabriku 19, Tallinn",
+							}, {
+								lat : 59.441835,
+								lon : 24.735210,
+								animation : google.maps.Animation.DROP,
+                                html : "<strong><a href='https://www.airbnb.com/rooms/10655558' target='_blank' onclick='ga(/'send/', /'event/', /'button/', /'click/', /'apartments:maps - Kotzebue/');'>1BR Kalamaja Kotzebue Street</a></strong><br/>Kotzebue 33, Tallinn",
 							}],
 							map_options : {
 								scrollwheel : false,
