--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 							<div class="video-embed">
 
 								<!-- VIDEO EMBED FROM YOUTUBE -->
-								<iframe class="video-async" data-source="youtube" data-video="7UAy8E3e9f8" allowfullscreen></iframe>
+								<iframe class="video-async" data-source="youtube" data-video="8mqXPZr0qRk" allowfullscreen></iframe>
 
 							</div>
 
